<resources>
    <string name="app_name">RegistrationList</string>
    <string name="action_settings">Settings</string>
    <string name="fine_choice">Fine choice!</string>
    <string name="you_are">You\'re gonna love our app.</string>
    <string name="fullname">Fullname</string>
    <string name="birth">Birth</string>
    <string name="email">Email Adress</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="date_picker_title">Date</string>
</resources>
